added gradle support